[package]
name = "cfront-definition-lexer"
version = "0.1.0"
edition = "2021"
description = "Token analyzer for C program language"
license = "MIT" 
repository = "https://github.com/CutieDeng/cfront-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfront-definition = { version = "0.1.*", path = "../cfront-definition" } 
cfront-definition-keyword = { version = "0.1.*", path = "../cfront-definition-keyword" } 
