[package]
name = "cfront-definition"
version = "0.1.0"
edition = "2021"
description = "Keyword token definition for C program language" 
license = "MIT" 
repository = "https://github.com/CutieDeng/cfront-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfront-definition-keyword = "0.1.*"